tests/baselines/reference/typeofUnknownSymbol.errors.txt
==== tests/cases/compiler/typeofUnknownSymbol.ts (1 errors) ====
    // previously gave no error here
    var x = typeof whatsthis
                   ~~~~~~~~~
!!! typeofUnknownSymbol.ts(2,16): error TS2095: Could not find symbol 'whatsthis'.
    